# BarkerMOOS

./: .gitignore  CMakeLists.txt  README.md  outputfile.txt
lib/: libBHV_SimpleWaypoint.dylib
missions/alder/: alder.bhv  alder.moos++
missions/lab_07/: .gitignore
missions/lab_07/alpha/: .gitignore  alpha_return.moos  alpha_return_now.moos
missions/lab_07/bravo_loiter/: .gitignore  bravo.bhv  bravo.moos
missions/lab_07/bravo_loiter_dbl/: .gitignore  bravo_double.bhv  bravo_double.moos
missions/lab_07/bravo_loiter_uuv/: .gitignore  bravo_uuv.bhv  bravo_uuv.moos
missions/lab_07/bravo_uuv_surface/: .gitignore  bravo_uuv_surface.bhv  bravo_uuv_surface.moos
missions/lab_08/alpha_bravo_pshare/: .gitignore  alpha_bravo_shoreside.moos  bravo.bhv  bravo_vehicle.moos
missions/lab_08/alpha_pshare/: .gitignore  alpha_shoreside.moos  alpha_vehicle.moos
missions/lab_08/henry_gilda_auto_refuel/: .LastOpenedMOOSLogDirectory  (+6 more)
missions/lab_09/: launch.sh  meta_shoreside.moos  meta_vehicle.bhv  meta_vehicle.moos  plug_pGenPath.moos  plug_pPointAssign.moos  plug_uFldNodeBroker.moos  targ_gilda.bhv  targ_gilda.moos  targ_henry.bhv  targ_henry.moos  targ_shoreside.moos
missions/lab_10/: targ_GILDA@congo.bhv  targ_GILDA@congo.moos  targ_henry@congo.bhv  targ_henry@congo.moos  targ_jasonbarker@congo.bhv  targ_jasonbarker@congo.moos  targ_shoreside.moos
missions/lab_12/: meta_shoreside.moos  meta_vehicle.bhv  meta_vehicle.moos  plug_uFldHazardMgr.moos  plug_uFldHazardMgrX.moos  targ_jake.bhv  targ_jake.moos  targ_kasper.bhv  targ_kasper.moos  targ_shoreside.moos
missions/s1_alpha/: alpha.bhv  alpha.moos  alpha.moos++  plug_pTransitAlpha.moos  test3.tss  test5.tss
missions/s1_charlie_dana/: TSSa.txt  altscore11.txt  altscore22.txt  altscore44.txt  altscore55.txt  finalscore14.txt  finalscore15.txt  finalscore22.txt  finalscore24.txt  finalscore34.txt  finalscore35.txt  finalscore42.txt  finalscore44.txt  finalscore45.txt  finalscore51.txt  finalscore52.txt  inbound.tss  launch.sh  meta_shoreside.moos  meta_vehicle.bhv  meta_vehicle.moos  multi.sh  plug_uFldNodeBroker.moos  plug_uTimerScript.moos  precSC.tss  score11final.txt  score12final.txt  score13final.txt  score14init.txt  score21init.txt  score23init.txt  score34init.txt  score35init.txt  score42init.txt  score43init.txt  score52init.txt  score53init.txt  score54init.txt  score55init.txt  targ_abe.bhv  (+22 more)
src/: CMakeLists.txt
src/app_buildtss/: CMakeLists.txt  main.cpp  test1.tss  test2.tss  test4.tss  test5.tss  test6.tss  test7.tss  test8.tss  test9.tss
src/app_extra/: CMakeLists.txt  main.cpp
src/app_voiview/: CMakeLists.txt  main.cpp
src/lib_behaviors-test/: BHV_DetailSurvey.cpp  BHV_DetailSurvey.h  BHV_FrontSurvey.cpp  BHV_FrontSurvey.h  BHV_InitialSweep.cpp  BHV_InitialSweep.h  BHV_Pulse.cpp  BHV_Pulse.h  BHV_Tripwire.cpp  BHV_Tripwire.h  BHV_Waypoint2020.cpp  BHV_WaypointX.cpp  BHV_WaypointX.h  BHV_ZigLeg.cpp  BHV_ZigLeg.h  CMakeLists.txt
src/lib_intercept/: CMakeLists.txt  SegIntercept.cpp  SegIntercept.h  SegListContact.cpp  SegListContact.h  SegListContactSet.cpp  SegListContactSet.h  SegListEdit.h  SegListExtrapolator.cpp  SegListExtrapolator.h  SegParts.cpp  SegParts.h  XYTrafficObject.cpp  XYTrafficObject.h  XYTrafficScheme.cpp  XYTrafficScheme.h  XYTransitLane.cpp  XYTransitLane.h
src/lib_traffic/: CMakeLists.txt  PopulatorTest.cpp  PopulatorTest.h  TrafficObject.cpp  TrafficObject.h  TrafficScheme.cpp  TrafficScheme.h  test2.tss
src/pCommunicationAngle_jbbarker/: .LastOpenedMOOSLogDirectory  .gitignore  AngleCalcs.cpp  AngleCalcs.h  CMakeLists.txt  CommunicationAngle_jbbarker.cpp  CommunicationAngle_jbbarker.h  CommunicationAngle_jbbarker_Info.cpp  CommunicationAngle_jbbarker_Info.h  main.cpp  pCommunicationAngle_jbbarker.moos
src/pGenPath/: CMakeLists.txt  GenPath.cpp  GenPath.h  GenPath_Info.cpp  GenPath_Info.h  main.cpp
src/pOdometry/: CMakeLists.txt  Odometry.cpp  Odometry.h  Odometry_Info.cpp  Odometry_Info.h  main.cpp
src/pPointAssign/: CMakeLists.txt  PointAssign.cpp  PointAssign.h  PointAssign_Info.cpp  PointAssign_Info.h  main.cpp  pPointAssign.moos  plug_pPointAssign.moos
src/pPrimeFactor/: .gitignore  CMakeLists.txt  PrimeEntry.cpp  PrimeEntry.h  PrimeFactor.cpp  PrimeFactor.h  PrimeFactor_Info.cpp  PrimeFactor_Info.h  Priming.cpp  main.cpp  pPrimeFactor.moos
src/pSegDetailing/: CMakeLists.txt  SegDetailing.cpp  SegDetailing.h  SegDetailing_Info.cpp  SegDetailing_Info.h  main.cpp  pSegDetailing.moos
src/pSegListIntercept/: CMakeLists.txt  SegListIntercept.cpp  SegListIntercept.h  SegListIntercept_Info.cpp  SegListIntercept_Info.h  main.cpp  pSegListIntercept.moos
src/pSegPassing/: CMakeLists.txt  SegPassing.cpp  SegPassing.h  SegPassing_Info.cpp  SegPassing_Info.h  main.cpp  pSegPassing.moos
src/pTSSCompliance/: CMakeLists.txt  TSSCompliance.cpp  TSSCompliance.h  TSSCompliance_Info.cpp  TSSCompliance_Info.h  main.cpp  pTSSCompliance.moos
src/pTempGenPath/: CMakeLists.txt  TempGenPath.cpp  TempGenPath.h  TempGenPath_Info.cpp  TempGenPath_Info.h  main.cpp
src/pTempPassing/: CMakeLists.txt  TempEntry.cpp  TempEntry.h  TempPassing.cpp  TempPassing.cpp~  TempPassing.h  TempPassing_Info.cpp  TempPassing_Info.h  main.cpp
src/pTrafficGrade/: CMakeLists.txt  TrafficGrade.cpp  TrafficGrade.h  TrafficGrade_Info.cpp  TrafficGrade_Info.h  main.cpp  pTrafficGrade.moos
src/pTrafficPopulate/: CMakeLists.txt  TrafficPopulate.cpp  TrafficPopulate.h  TrafficPopulate_Info.cpp  TrafficPopulate_Info.h  main.cpp  pTrafficPopulate.moos
src/pTrafficScheme/: CMakeLists.txt  TrafficScheme.cpp  TrafficScheme.h  TrafficScheme_Info.cpp  TrafficScheme_Info.h  main.cpp  pTrafficScheme.moos
src/pTransitAlpha/: CMakeLists.txt  TransitAlpha.cpp  TransitAlpha.h  TransitAlpha_Info.cpp  TransitAlpha_Info.h  main.cpp  pTransitAlpha.moos  plug_pTransitAlpha.moos
src/pTransitLanes/: CMakeLists.txt  TransitLanes.cpp  TransitLanes.h  TransitLanes_Info.cpp  TransitLanes_Info.h  main.cpp  pTransitLanes.moos
src/uFldHazardMgrX/: CMakeLists.txt  HazardMgr.cpp  HazardMgr.h  plug_uFldHazardMgrX.moos
(+226 files in other folders)
