#--------------------------------------------------------
# The CMakeLists.txt for:                    lib_traffic
# Author(s):                                Jason Barker
#--------------------------------------------------------

SET(SRC 
  TrafficObject.cpp
  TrafficScheme.cpp)

ADD_LIBRARY(traffic ${SRC})

